--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
+    "micro": "^10.0.1",
     "next": "latest",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
